docs: hyper-v install content

--- a/visual-kpi-docs/docs/setup-and-administration/installation/install-visual-kpi.mdx
+++ b/visual-kpi-docs/docs/setup-and-administration/installation/install-visual-kpi.mdx
@@ -1,9 +1,9 @@
 ---
 id: install-visual-kpi
-title: Install Visual Kpi
+title: Install Visual KPI Server Manager
 slug: /setup-and-administration/installation/install-visual-kpi
 description: 'Presents the steps the administrator must follow to install Visual KPI into their server or cloud.'
-tags: ['documentation']
+tags: ['documentation', 'Visual KPI', 'Server Manager']
 ---
 
 import StylizedImage from '@site/src/components/StylizedImage/StylizedImage';
