--- a/visual-kpi-docs/docs/setup-and-administration/installation/prepare-your-system.mdx
+++ b/visual-kpi-docs/docs/setup-and-administration/installation/prepare-your-system.mdx
@@ -13,7 +13,6 @@ This guide describes all needed steps to be ready to install Visual KPI Server M
 
 The following table presents the main requirements you need to use Visual KPI Server Manager:
 
-
 <table>
   <thead>
     <tr>
@@ -61,6 +60,10 @@ The following table presents the main requirements you need to use Visual KPI Se
     </tr>
   </tbody>
 </table>
+
+:::info Windows Server
+If you don't have a windows server and still want to experiment with Visual KPI Server Manager, you can [install a Virtual Machine using Hyper-V](/).
+:::
 
 ## Step 1: .NET Framework
 
