--- a/transpara-v6/docs/getting-started/what-is-transpara.mdx
+++ b/transpara-v6/docs/getting-started/what-is-transpara.mdx
@@ -7,13 +7,13 @@ description: 'Discover Transpara V6'
 
 **OLD TEXT, USED AS A HOLDER**
 
-Transpara's Visual KPI is an innovative software solution that simplifies real-time operations management and performance tracking for businesses into one easy-to-use solution. Visual KPI is designed to meet the critical needs of companies by providing an integrated approach to monitoring, analysis, and operations optimization.
+Transpara is an innovative software solution that simplifies real-time operations management and performance tracking for businesses into one easy-to-use solution. Transpara is designed to meet the critical needs of companies by providing an integrated approach to monitoring, analysis, and operations optimization.
 
 ## Our Product and Who Uses It
 
-Visual KPI offers different options to monitor your business operations in a straightforward solution. You won't have to contact different teams to get insights. Instead, Transpara's Visual KPI automatically collects data from various sources, and you can view it all in a single place. It simplifies the data analysis, making things easier to manage. In addition, Visual KPI also sends notifications when there is something you need to address, and you can access it using desktop or mobile.
+Transpara offers different options to monitor your business operations in a straightforward solution. You won't have to contact different teams to get insights. Instead, Transpara automatically collects data from various sources, and you can view it all in a single place. It simplifies the data analysis, making things easier to manage. In addition, Transpara also sends notifications when there is something you need to address, and you can access it using desktop or mobile.
 
-Visual KPI typical customers come from various industries, including:
+Transpara typical customers come from various industries, including:
 
 - Energy & Utilities
 - IT Cloud & Data
@@ -27,11 +27,11 @@ Visual KPI typical customers come from various industries, including:
 - Water & Wastewater
 - and more
 
-Visual KPI's solution is completely customizable, and we keep adding new features to meet your changing business needs.
+Transpara's solution is completely customizable, and we keep adding new features to meet your changing business needs.
 
-## What are the benefits of using Visual KPI?
+## What are the benefits of using Transpara?
 
-Visual KPI enables you to connect with multiple data sources and integrate them easily, customizing each operation through an intuitive and user-friendly dashboard. With Transpara's Visual KPI, you have the following benefits:
+Transpara enables you to connect with multiple data sources and integrate them easily, customizing each operation through an intuitive and user-friendly dashboard. With Transpara, you have the following benefits:
 
 - Visualize and monitor the performance of your operations in near real-time, eliminating the reliance on outdated reports.
 - Use on different devices (computer or on your mobile phone).
@@ -40,9 +40,9 @@ Visual KPI enables you to connect with multiple data sources and integrate them 
 - Simplify analysis and decision-making based on accurate information.
 - Rely on the free support of a dedicated sales team.
 
-## Real-Time Excellence with Visual KPI
+## Real-Time Excellence with Transpara
 
-Transpara's Visual KPI provides a comprehensive solution to connect and optimize your operations management and monitor near real-time performance. If you want to learn more or have a specific data source you'd like to include in your platform, [please contact us](https://www.transpara.com/contact-us/).
+Transpara provides a comprehensive solution to connect and optimize your operations management and monitor near real-time performance. If you want to learn more or have a specific data source you'd like to include in your platform, [please contact us](https://www.transpara.com/contact-us/).
 
 :::support Contact Transpara
 
@@ -51,5 +51,3 @@ The Transpara team is always ready to support you. Contact our [support team](ht
 :::
 
 We're constantly updating and expanding our software to meet your ever-evolving needs. We support dozens of data sources out of the box and are ready to help you if you have other needs.
-
-
