--- a/visual-kpi-docs/docs/end-user/basic-navigation/visualization.mdx
+++ b/visual-kpi-docs/docs/end-user/basic-navigation/visualization.mdx
@@ -13,7 +13,7 @@ Visual KPI provides different options to visualize data, making it easier to com
 
 ## Group visualizations
 
-Groups are how your information is organized, a key form of navigation. Some of the icons you see in Groups are universal. Others only show up if they have been turned on and/or configured in the Visual KPI Designer. And still, others show up depending on what you are viewing.
+Groups are how your information is organized, a key form of navigation. Groups are also the primary view of the hierarchy. Some of the icons you see in Groups are universal. Others only show up if they have been turned on and/or configured in the Visual KPI Designer. And still, others show up depending on what types of KPIs or data you are viewing.
 
 ## Top Bar
 
@@ -45,6 +45,15 @@ The Group Roll-Up is the list view, which is the default view in [Groups](/docs/
 Group Roll-ups are bar charts that summarize how all your KPIs in a defined set (Group) are performing at a glance. The colors on Group Roll-ups indicate status and are relative to the other colors. Each bar shows the group's performance in percentages and rolls them up to show how that group is performing.
 
 The top bar in Group Roll-Ups (parent group) represents the overall status of the group. It includes the parent group and all child groups. That means that no matter how many levels of groups you have, the parent group will always roll up the overall status of all the KPIs in that group and every group that belongs to that group.
+
+:::note
+If KPIs, Charts or Tables exist at each level, they will be shown below the groups.
+
+<StylizedImage
+  imgURL="img/docs/end-user/basic-navigation/visualization/group-visualization.gif"
+  alt="Show how KPIs, Charts, and tables are displayed below groups."
+/>
+:::
 
 ### Filters
 
