docs: dashboard pages

--- a/transpara-v6/docs/dashboards/dashboards.mdx
+++ b/transpara-v6/docs/dashboards/dashboards.mdx
@@ -2,6 +2,42 @@
 id: dashboards
 title: Dashboards
 slug: /dashboards
-description: 'Learn the basic about the dashboards.'
+description: 'Learn the basics about the dashboards.'
 tags: ['dashboards']
 ---
+
+## Basic Features [rethink this title]
+
+At the top of the Dashboard, you will see the Dashboard's name, a lock symbol (if the Dashboard is locked), the **Edit Mode** button, the other options button (...), the **Add Widget** button, the **Reset** button, the **Save** button, and the dropdown arrow for more options.
+
+### Other Options (...)
+
+Clicking on the (...) button, you will see a drop-down menu with the following options:
+
+1. **Create Ad Hoc Trend**
+2. **Mark as Favorite**
+3. **Set as Default Dashboard**
+4. **Add to Bookmark Bar**
+5. **Lock Dashboard**
+6. **Dashboard Settings**
+7. **Delete**
+
+### Add Widget
+
+Clickin on **Add Widget**, you will see a drop-down menu with the following options:
+
+1. **Dashboard Link**
+2. **Custom Link**
+3. **Text Block**
+4. **Image Block**
+5. **Video**
+6. **Divider**
+
+## Time Ranges
+
+Time ranges can be defined for each added Object, or for the entire Dashboard (through the Designer). The time range can be overridden by clicking on the calendar icon, at the top right corner of the Dashboard screen and selecting a time range.  If you do that, all the objects in the Dashboard will appear with that time range.
+
+When adding a new object to the Dashboard, it will preserve the selected time range. For example, if you are looking at a Trend for 10 minutes period, 2 weeks ago, and you add that to the Dashboard, it will maintain that time range configuration.
+
+[comment]: # (Check if the time will always be that specific time in that one day, or if it wil "walk" once the day moves, for example, two days from now, the 10 min period will be the the same or it will be two weeks before that day.)
+
