--- a/transpara-v6/docs/dashboards/differences-between-v5-and-v6.mdx
+++ b/transpara-v6/docs/dashboards/differences-between-v5-and-v6.mdx
@@ -7,3 +7,18 @@ tags: ['dashboards']
 ---
 
 - **Delete Dashboards**: If the user created a Dashboard, they can delete it. Previously only the Designer had the power to delete Dashboards.
+
+## Dashboard Hierarchy
+
+Dashboards in V6 are no longer isolated objects but can exist within a hierarchy. This allows dashboards to be associated with specific groups or sites, improving navigation and organization. For example:
+
+- Dashboards can belong to a specific region or site.
+- Users can access dashboards relevant to their context without excessive scrolling or searching.
+
+## Editing in Context
+
+In v6, you can edit a Dashboard while still seeing its contents.
+
+## KPI Positioning in Different Sizes
+
+you can set up things to be in the same container, so that when the size of the screen goes down, specific things remain together.
