--- a/transpara-v6/docs/dashboards/how-to-copy-a-dashboard.mdx
+++ b/transpara-v6/docs/dashboards/how-to-copy-a-dashboard.mdx
@@ -1,20 +1,10 @@
 ---
-id: how-to-create-a-dashboard
-title: How to Create a Dashboard
-slug: /how-to-create-a-dashboard
-description: 'Learn how to create a dashboard.'
+id: how-to-copy-a-dashboard
+title: How to Copy a Dashboard
+slug: /how-to-copy-a-dashboard
+description: 'Learn how to copy a dashboard.'
 tags: ['dashboards']
 ---
-
-To create a Dashboard, follow these steps:
-
-1. Find an object that you would like to add to you Dashboard, such as a Trend, Chart, or KPI.
-
-2. With the desired object opened, click on the configurations button, on the top right corner.
-
-3. In this menu you will see the options to **Add to current Dashboard**, **Create New Dashboard with This**, and **Add to Existing Dashboard**.
-
-## Copy Dashboard
 
 Another way of creating a Dashboard is by copying or duplicating an existing Dashboard. In the sidebar, to the left, you will see a **Create New** button at the bottom of the Dashboards section. You can click on it to create a new Dashboard or a copy of an existing Dashboard. For duplicating an existing Dashboard, you will have to select the option **Copy Existing Dashboard** and then select the Dashboard you wish to copy from the drop-down list. You can also search by name, which is especially useful if you have many Dashboards.
 
