--- a/transpara-v6/docs/tcalc/tcalc-glossary.mdx
+++ b/transpara-v6/docs/tcalc/tcalc-glossary.mdx
@@ -3,7 +3,7 @@ id: tcalc-glossary
 title: tCalc Glossary
 slug: tcalc-glossary
 description: ''
-tags: ['documentation']
+tags: ['glossary']
 ---
 
 - **tCalc**: The overall solution that integrates various tools for building and managing calculations, formulas, and data within the tModel. It includes features for building, storing, and executing calculations.
@@ -41,3 +41,7 @@ tags: ['documentation']
 - **Break Statement**: A special function in a calculation that halts further calculation if a specified condition is not met, improving performance by stopping unnecessary operations.
 
 - **Eventual Consistency**: The principle that data will eventually become consistent across all systems, though calculations may not always occur in real time due to delays in execution.
+
+- **Latched**: A time-bound configuration for dashboards where all widgets synchronize to a single, unified time range, overriding individual time settings, enabling cohesive analysis within the specified time window.
+
+- **Hierarchy**: The organizational structure in dashboards that functions like folders on a PC, enabling users to create unlimited levels of groups. Each group can contain multiple objects, such as dashboards or KPIs, improving scalability, navigation, and contextual relevance by associating dashboards with specific contexts, such as regions, sites, or departments.
